# pysize

./: .travis.yml  LICENSE.rst  LICENSE.txt  README.md  README.rst  pysize.py  setup.cfg  setup.py  test_pysize.py
src/: pysize.py
