[metadata]
name = pysize
url = https://github.com/bosswissam/pysize
project_urls = 
    CI: Travis = https://travis-ci.com/bosswissam/pysize
    GitHub: repo = https://github.com/bosswissam/pysize
    GitHub: issues = https://github.com/bosswissam/pysize/issues
author = bosswissam
author_email = bosswissam@gmail.com
description = Use to quickly measure the size of your python objects.
long_description = file: README.rst
license = MIT
license_file = LICENSE.rst
keywords =
    check
    size
    tool
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing

[options]
python_requires = >=2.6
include_package_data = True
packages = find:
packages_dir = 
    = .

[bdist_wheel]
universal = 1
